form gap, responsivity fixes

--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -117,5 +117,7 @@ form {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+  form {
+    gap: .8rem;
 }
 
